# model-regression-detection-system

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.worker  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: evaluate.yml
docs/: architecture.md  database.md  evaluation-specification.md  evaluators.md  json-report.md  limits.md  local-runner.md  milestones.md  openrouter.md  persistence.md  policy.md  prd.md  roadmap.md  run-submission-api.md  tasks.md  worker.md
examples/: evaluation.yaml  fake-responses.json
migrations/: env.py  script.py.mako
migrations/versions/: 0001_initial.py  0002_run_lifecycle.py  0003_worker_lease.py  0004_baseline_channels.py  0005_cancellation.py  0006_project_tokens.py
scripts/: backup.sh  entrypoint.sh  healthcheck-worker.py  restore.sh
src/model_regression_detection/: __init__.py  cli.py  config.py  logging.py  main.py
src/model_regression_detection/api/: auth.py  baselines.py  body_limit.py  dependencies.py  metrics.py  middleware.py  ratelimit.py  routes.py  runs.py  schemas.py  token_management.py  tokens.py
src/model_regression_detection/domain/: __init__.py  versions.py
tests/: __init__.py  conftest.py  test_api.py  test_auth.py  test_baseline_comparison.py  test_baselines_api.py  test_cancel_api.py  test_cancellation.py  test_cli.py  test_cli_remote.py  test_config.py  test_evaluators.py  test_execution.py  test_fault_scenarios.py  test_html_report.py  test_limits.py  test_logging.py  test_middleware.py  test_notifications.py  test_openrouter.py  test_persistence.py  test_policy.py  test_providers.py  test_reporting.py  test_runs_api.py  test_specification.py  test_versions.py  test_worker.py
(+33 files in other folders)
